--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 100
+      <h1 style="text-align:center;"> Página principal</h1>
     </ion-title>
   </ion-toolbar>
 </ion-header>
